fix: :lipstick: fix overflow in `notion-list`

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -308,7 +308,8 @@
   fill: var(--fg-color);
 }
 
-.notion-toggle {
+.notion-toggle,
+.notion-list {
   max-width: 100%;
 }
 
